assets/css/styles.css
:root {
    --white-1: hsl(0, 0%, 100%);
    --white-2: hsl(0, 0%, 75%);
    --white-3: hsl(0, 0%, 50%);
    --black-1: hsl(0, 0%, 0%);
    --black-2: hsl(0, 0%, 8%);
    --black-3: hsl(0, 0%, 16%);
    --green-1: hsl(100, 30%, 15%);
    --yellow-1: hsl(40, 30%, 15%);
    --red-1: hsl(0, 30%, 15%);
    --blue-1: hsl(200, 30%, 15%);
}

body {
    background-color: var(--black-2);
    max-width: 1000px;
    min-width: 400px;
    margin: 0 auto;
    padding-top: 64px;
    font-family: "Google Sans", sans-serif;
    color: hsl(0, 0%, 100%);
}

div.center {
    margin: 16px 0;
    text-align: center;
    border: 1px solid var(--white-3);
}

div.center button {
    font-size: xx-large;
    font-weight: 900;
    width: 480px;
    height: 64px;
}

div.center button > img {
    height: 32px;
}

code {
    font-family: "Google Sans Code", monospace;
}

.block {
    background-color: var(--black-3);
    border-radius: 16px;
    padding: 8px 24px;
    margin: 20px 0;
    filter: drop-shadow(hsla(0, 0%, 0%, 25%) 0 8px 8px);
}

table {
    border-collapse: collapse;
    display: block;
    overflow-x: scroll;
    scrollbar-color: var(--white-3) transparent;
    margin-top: 14px;
    margin-left: 4px;
}

caption {
    caption-side: bottom;
    margin-top: 12px;
}

table.downloads button {
    padding: 8px;
    width: 200px;
    margin: 4px 0;
}

table.downloads th[scope="row"] {
    max-width: 60px;
    min-width: 60px;
}

table.downloads td {
    padding: 4px;
    /* haxx */
    min-width: 208px;
    max-width: 208px;
}

th, td {
    border: 1px solid var(--white-3);
    padding: 8px;
    min-width: 140px;
    max-width: 140px;
}

th {
    background-color: var(--black-2);
}

table.comparison th[scope="row"] {
    text-align: left;
}

td {
    text-align: center;
}

td.yes {
    background-color: var(--green-1);
}

td.mixed {
    background-color: var(--yellow-1);
}

td.no {
    background-color: var(--red-1);
}

td.info {
    background-color: var(--blue-1);
}

h1, h2 {
    margin: 16px 0 4px;
}

h1 {
    font-weight: 900;
    font-size: xx-large;
}

h2 {
    font-weight: 900;
    font-size: x-large;
}

a {
    color: var(--white-1);
}

a:hover {
    color: var(--white-2);
}

ol > li, ul > li {
    margin: 8px 0;
}

/* what the fuck??)))) xd */
ol > li li, ul > li li {
    margin: 2px 0;
}

hr {
    border: 1px solid var(--white-3);
}

.button-row {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

button {
    color: var(--white-1);
    border: 1px solid var(--white-2);
    background-color: transparent;
    border-radius: 8px;
    font-family: Inter, sans-serif;
    padding: 4px 8px;
    cursor: pointer;
}

button img, img.how {
    height: 16px;
    filter: saturate(0) brightness(0) invert(1);
}

img.title {
    height: 28px;
    padding-right: 4px;
}

button img {
    margin-bottom: -4px;
}

img.what {
    margin-bottom: -3px;
    margin-right: 3px;
}

img.how {
    margin-bottom: -2px;
}

button.icon-only {
    height: 64px;
    width: 64px;
}

button.icon-only img {
    height: 32px;
}

button:disabled img {
    filter: invert(0.5);
}

/* this is fucked up */

.header-container {
    z-index: 100;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    position: fixed;
    max-width: 1000px;
    width: 100%;
    padding: 0;
}

.header {
    height: 48px;
    display: flex;
}

.header button {
    height: 48px;
    font-size: 20px;
    padding: 0 16px;
}

.header button > img {
    height: 24px;
    width: 24px;
    margin-right: 4px;
}

.header > div {
    display: flex;
    flex: 0 0 50%;
}

.header-right {
    justify-content: flex-end;
}

.header-blur {
    z-index: 1;
    height: 52px;
    width: 100vw;
    background-color: transparent;
    position: fixed;
    top: 0;
    left: 0;
    mask: linear-gradient(black, transparent); /* this shouldn't be --black-1 or mask will break */
    backdrop-filter: blur(8px);
}

.header-logo {
    height: 48px;
    width: 48px;
}

.header .button-row {
    gap: 8px;
}

.header button.icon-only {
    margin-top: 8px;
    margin-right: 8px;
    height: 24px;
    width: 24px;
    border: 0;
}

.header button.icon-only img {
    height: 24px;
}

/**/

.footer {
    color: var(--white-2);
    font-size: small;
    text-align: center;
    width: 100%;
    margin-bottom: 32px; /* we're living in the world where home button is an iphone pill */
}

.footer a {
    color: var(--white-2);
    text-decoration: none;
}

.footer a:hover {
    text-decoration: underline;
}

.footer > * {
    margin: 0 8px;
}

.footer-title {
    display: inline-block;
}

@media screen and (width <= 1000px) {
    .footer-title {
        display: inherit;
        margin-bottom: 4px;
    }
}

.focus, .message {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: var(--white-1);
}

.formerly {
    color: var(--white-2);
    margin-top: -16px;
    margin-bottom: 32px;
}

.focus {
    margin-top: 64px;
}

.focus > img {
    margin-bottom: -100px;
    width: 100%;
    max-width: 800px;
    mask: linear-gradient(black, black, transparent); /* this shouldn't be --black-1 or mask will break */
}

img.focus-logo {
    margin-bottom: 16px;
    width: 80%;
    max-width: 400px;
    mask: none;
}

.content {
    padding-bottom: 24px;
}

.content .button-row {
    margin: 8px 0 12px;
}

.message, .message-footer {
    filter: invert(25%);
}

.message {
    margin-top: 128px;
}

.message > img {
    width: 80px;
}

.message > span {
    font-weight: 600;
    font-size: xx-large;
}

.message-footer {
    left: 50%;
    transform: translateX(-50%);
    bottom: 64px;
    position: fixed;
}

.message-footer > span {
    font-size: small;
}

